--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -118,7 +118,7 @@ box2d-py==2.3.8 # LEVEL_01 # Python Box2D
 #
 wrds==3.1.1 # LEVEL_04 # Python access to WRDS Data
 ray==1.8.0 # LEVEL_04 # Ray provides a simple, universal API for building distributed applications
-redis==4.0.0 # LEVEL_03 # Python client for Redis database and key-value store
+redis==4.0.1 # LEVEL_03 # Python client for Redis database and key-value store
 tensorboardX==2.4 # LEVEL_02 # TensorBoardX lets you watch Tensors Flow without Tensorflow
 lz4==3.1.3 # LEVEL_01 # LZ4 Bindings for Python
 GPUtil==1.4.0 # LEVEL_01 # GPUtil is a Python module for getting the GPU status from NVIDA GPUs using nvidia-smi
@@ -126,7 +126,7 @@ GPUtil==1.4.0 # LEVEL_01 # GPUtil is a Python module for getting the GPU status 
 #
 # Machine Learning
 #
-tensorflow-text==2.7.0 # LEVEL_07 # TF.Text is a TensorFlow library of text related ops, modules, and subgraphs
+tensorflow-text==2.7.1 # LEVEL_07 # TF.Text is a TensorFlow library of text related ops, modules, and subgraphs
 tensorflow==2.7.0 # LEVEL_06 # TensorFlow is an open source machine learning framework for everyone
 tensorboard==2.7.0 # LEVEL_05 # TensorBoard lets you watch Tensors Flow
 tensorflow-estimator==2.7.0 # LEVEL_01 # TensorFlow Estimator
@@ -212,8 +212,8 @@ Babel==2.9.1 # LEVEL_02 # Internationalization utilities
 bert-for-tf2==0.14.9 # LEVEL_03 # A TensorFlow 2.0 Keras implementation of BERT
 bertviz==1.2.0 # LEVEL_06 # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger # Attention visualization tool for NLP Transformer models
 sentencepiece==0.1.96 # LEVEL_01 # for BERT # SentencePiece python wrapper
-boto3==1.20.7 # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
-botocore==1.23.7 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
+boto3==1.20.8 # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
+botocore==1.23.8 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
 #
 spacytextblob==3.0.1 # LEVEL_05 # A TextBlob sentiment analysis pipeline compponent for spaCy
 spacy==3.2.0 # LEVEL_04 # Industrial-strength Natural Language Processing (NLP) in Python
@@ -222,7 +222,7 @@ spacy-legacy==3.0.8 # LEVEL_01 # Legacy registered functions for spaCy backwards
 # spacy-transformers  # downgrades transformers !!
 thinc==8.0.13 # LEVEL_03 # A refreshing functional take on deep learning, compatible with your favorite libraries
 #
-transformers==4.12.4 # LEVEL_04 # State-of-the-art Natural Language Processing for TensorFlow 2.0 and PyTorch
+transformers==4.12.5 # LEVEL_04 # State-of-the-art Natural Language Processing for TensorFlow 2.0 and PyTorch
 #
 tokenizers==0.10.3 # LEVEL_01 # Fast and Customizable Tokenizers
 #
@@ -398,7 +398,7 @@ s3transfer==0.5.0 # LEVEL_04 # An Amazon S3 Transfer Manager
 # Jupyter
 #
 jupyter==1.0.0 # LEVEL_09 # Jupyter metapackage. Install all the Jupyter components in one go
-jupyterlab==3.2.3 # LEVEL_08 # JupyterLab computational environment
+jupyterlab==3.2.4 # LEVEL_08 # JupyterLab computational environment
 jupyter-server-proxy==3.1.0 # LEVEL_07 # Jupyter server extension to supervise and proxy web services
 jupyterlab-server==2.8.2 # LEVEL_07 # A set of server components for JupyterLab and JupyterLab like applications
 jupyter-dash==0.4.0 # LEVEL_06 # Dash support for the Jupyter notebook interface
@@ -436,11 +436,16 @@ Flask==2.0.2 # LEVEL_03 # A simple framework for building complex web applicatio
 #
 jsonschema==4.2.1 # LEVEL_02 # An implementation of JSON Schema validation for Python
 json5==0.9.6 # LEVEL_01 # A Python implementation of the JSON5 data format
-json-rpc==1.13.0 # LEVEL_01 # JSON-RPC transport implementation
 simplejson==3.17.6 # LEVEL_01 # Simple, fast, extensible JSON encoder/decoder for Python
 ujson==4.2.0 # LEVEL_01 # Ultra fast JSON encoder and decoder for Python
 PyJWT==2.3.0 # LEVEL_01 # JSON Web Token implementation in Python
 jmespath==0.10.0 # LEVEL_01 # JSON Matching Expressions
+#
+# RPC
+#
+grpcio-status==1.42.0 # LEVEL_03 # Status proto mapping for gRPC
+grpcio==1.42.0 # LEVEL_02 # HTTP/2-based RPC framework
+json-rpc==1.13.0 # LEVEL_01 # JSON-RPC transport implementation
 
 #
 # Sphinx
@@ -502,7 +507,7 @@ python-daemon==2.3.0 # LEVEL_02 # Library to implement a well-behaved Unix daemo
 lockfile==0.12.2 # LEVEL_01 # Platform-independent file locking module
 
 # Markdown
-Markdown==3.3.5 # LEVEL_03 # Python implementation of Markdown
+Markdown==3.3.6 # LEVEL_03 # Python implementation of Markdown
 commonmark==0.9.1 # LEVEL_01 # Python parser for the CommonMark Markdown spec
 mistune==0.8.4 # LEVEL_01 # The fastest markdown parser in pure Python
 
@@ -569,8 +574,6 @@ future==0.18.2 # LEVEL_01 # Clean single-source support for Python 3 and 2
 geographiclib==1.52 # LEVEL_01 # The geodesic routines from GeographicLib
 geopy==2.2.0 # LEVEL_02 # Python Geocoding Toolbox
 gin-config==0.5.0 # LEVEL_01 # Gin-Config: A lightweight configuration library for Python
-grpcio-status==1.41.1 # LEVEL_03 # Status proto mapping for gRPC
-grpcio==1.41.1 # LEVEL_02 # HTTP/2-based RPC framework
 HeapDict==1.0.1 # LEVEL_01 # a heap with decrease-key and increase-key operations
 hijri-converter==2.2.2 # LEVEL_01 # Accurate Hijri-Gregorian dates converter based on the Umm al-Qura calendar
 hsluv==5.0.2 # LEVEL_01 # Human-friendly HSL
@@ -879,7 +882,7 @@ netCDF4==1.5.8 # LEVEL_03 # Provides an object-oriented python interface to the 
 cftime==1.5.1.1 # LEVEL_02 # Time-handling functionality from netcdf4-python
 omegaconf==2.1.1 # LEVEL_02 # A flexible configuration library
 docker-pycreds==0.4.0 # LEVEL_02 # Python bindings for the docker credentials store API
-sentry-sdk==1.4.3 # LEVEL_02 # Python client for Sentry (https://sentry.io)
+sentry-sdk==1.5.0 # LEVEL_02 # Python client for Sentry (https://sentry.io)
 yaspin==2.1.0 # LEVEL_02 # Yet Another Terminal Spinner
 configparser==5.1.0 # LEVEL_01 # Updated configparser from Python 3.8 for Python 2.6+
 pathtools==0.1.2 # LEVEL_01 # File system general utilities
