--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -58,6 +58,7 @@ wrapt==1.12.1 # LEVEL_01 # LOCKED # tensorflow 2.6.0 requires 1.12.1 # Module fo
 #
 typing-extensions==3.7.4.3 # LEVEL_01 # LOCKED # tensorflow==2.6.0 requires ~3.7.4 # Backported and Experimental Type Hints for Python 3.5+
 #
+panel==0.11.0 # LEVEL_04 # LOCKED # A high level app and dashboarding solution for Python
 bokeh==2.3.3 # LEVEL_03 # LOCKED # 2.4.0 does not work easily just yet; typing-extensions and tensorflow !! # Interactive plots and applications in the browser from Python
 jupyter-bokeh==3.0.3 # LEVEL_09 # LOCKED # 3.0.4 does not work easily just yet; typing-extensions and tensorflow !! # A Jupyter extension for rendering Bokeh content
 #
@@ -126,7 +127,7 @@ GPUtil==1.4.0 # LEVEL_01 # GPUtil is a Python module for getting the GPU status 
 #
 # Machine Learning
 #
-tensorflow-text==2.7.0 # LEVEL_07 # TF.Text is a TensorFlow library of text related ops, modules, and subgraphs
+tensorflow-text==2.7.2 # LEVEL_07 # TF.Text is a TensorFlow library of text related ops, modules, and subgraphs
 tensorflow==2.7.0 # LEVEL_06 # TensorFlow is an open source machine learning framework for everyone
 tensorboard==2.7.0 # LEVEL_05 # TensorBoard lets you watch Tensors Flow
 tensorflow-estimator==2.7.0 # LEVEL_01 # TensorFlow Estimator
@@ -268,7 +269,7 @@ platformdirs==2.4.0 # LEVEL_01 # A small Python module for determining appropria
 #
 opencv-python==4.5.4.58 # LEVEL_02 # Wrapper package for OpenCV python bindings
 opencv-python-headless==4.5.4.58 # LEVEL_02 # Wrapper package for OpenCV python bindings
-imageio==2.10.5 # LEVEL_02 # Library for reading and writing a wide range of image, video, scientific, and volumetric data formats
+imageio==2.11.0 # LEVEL_02 # Library for reading and writing a wide range of image, video, scientific, and volumetric data formats
 tifffile==2021.11.2 # LEVEL_02 # Read and write TIFF files
 Pillow==8.4.0 # LEVEL_01 # Python Imaging Library (Fork)
 imagesize==1.3.0 # LEVEL_01 # Getting image size from png/jpeg/jpeg2000/gif file
@@ -339,6 +340,8 @@ Pygments==2.10.0 # LEVEL_01 # Pygments is a syntax highlighting package written 
 pydot==1.4.2 # LEVEL_02 # Python interface to Graphviz's Dot
 networkx==2.6.3 # LEVEL_01 # Python package for creating and manipulating graphs and networks
 # pysimpleguiqt>=0.35.0
+#
+holoviews==1.14.6 # LEVEL_05 # Stop plotting your data - annotate your data and let it visualize itself
 #
 vispy==0.9.3 # LEVEL_02 # Interactive visualization in Python
 #
@@ -609,7 +612,7 @@ netifaces==0.11.0 # LEVEL_01 # Portable network interface information
 oauth2client==4.1.3 # LEVEL_03 # OAuth 2.0 client library
 oauthlib==3.1.1 # LEVEL_01 # A generic, spec-compliant, thorough implementation of the OAuth request-signing logic
 opt-einsum==3.3.0 # LEVEL_02 # Optimizing numpys einsum function
-packaging==21.2 # LEVEL_02 # Core utilities for Python packages
+packaging==21.3 # LEVEL_02 # Core utilities for Python packages
 pandocfilters==1.5.0 # LEVEL_01 # Utilities for writing pandoc filters in python
 params-flow==0.8.2 # LEVEL_02 # Tensorflow Keras utilities for reducing boilerplate code
 parso==0.8.2 # LEVEL_01 # A Python Parser
@@ -630,7 +633,7 @@ ptyprocess==0.7.0 # LEVEL_01 # Run a subprocess in a pseudo terminal
 py-cpuinfo==8.0.0 # LEVEL_01 # Get CPU info with pure Python 2 & 3
 py-lets-be-rational==1.0.1 # LEVEL_02 # Pure python implementation of Peter Jaeckel's LetsBeRational
 py-params==0.10.2 # LEVEL_01 # A type safe dictionary in python
-pyarrow==6.0.0 # LEVEL_02 # Python library for Apache Arrow
+pyarrow==6.0.1 # LEVEL_02 # Python library for Apache Arrow
 pyasn1==0.4.8 # LEVEL_01 # ASN.1 types and codecs
 pyasn1-modules==0.2.8 # LEVEL_02 # A collection of ASN.1-based protocols modules
 pycares==4.1.2 # LEVEL_03 # Python interface for c-ares
@@ -800,7 +803,7 @@ munch==2.5.0 # LEVEL_02 # A dot-accessible dictionary (a la JavaScript objects)
 fire==0.4.0 # LEVEL_02 # A library for automatically generating command line interfaces
 #
 geopandas==0.10.2 # LEVEL_04 # Geographic pandas extensions
-pyproj==3.2.1 # LEVEL_02 # Python interface to PROJ (cartographic projections and coordinate transformations library)
+pyproj==3.3.0 # LEVEL_02 # Python interface to PROJ (cartographic projections and coordinate transformations library)
 Shapely==1.8.0 # LEVEL_01 # Geometric objects, predicates, and operations
 #
 #geotiff==0.2.3 # LEVEL_04 # has old dependencies on tifffile
