--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -48,12 +48,6 @@ mplfinance==0.12.7a17 # LEVEL_05 # Utilities for the visualization, and visual a
 gast==0.4.0 # LEVEL_01 # LOCKED # tensorflow 2.6.0 <0.5.0 # Python AST that abstracts the underlying Python version
 absl-py==0.12.0 # LEVEL_02 # LOCKED # tensorflow-metadata 1.2.0 has requirement absl-py<0.13,>=0.9 # Abseil Python Common Libraries, see https://github.com/abseil/abseil-py
 #
-wrapt==1.12.1 # LEVEL_01 # LOCKED # tensorflow 2.6.0 requires 1.12.1 # Module for decorators, wrappers and monkey patching
-#
-panel==0.11.0 # LEVEL_04 # LOCKED # A high level app and dashboarding solution for Python
-bokeh==2.3.3 # LEVEL_03 # LOCKED # 2.4.0 does not work easily just yet; tensorflow !! # Interactive plots and applications in the browser from Python
-jupyter-bokeh==3.0.3 # LEVEL_09 # LOCKED # 3.0.4 does not work easily just yet; tensorflow !! # A Jupyter extension for rendering Bokeh content
-#
 pystan==2.19.1.1 # LEVEL_02 # LOCKED # POST_INSTALL_00 # prophet 1.0.1 has requirement pystan~=2.19.1.1 # Python interface to Stan, a package for Bayesian inference
 cmdstanpy==0.9.68 # LEVEL_04 # LOCKED # prophet==1.0.1 requires cmdstanpy==0.9.68 # Python interface to CmdStan
 #
@@ -96,7 +90,10 @@ clang==11.0 # LEVEL_01 # libclang python bindings
 h5py==3.6.0 # LEVEL_02 # Read and write HDF5 files from Python
 google-auth==2.3.3 # LEVEL_03 # Google Authentication Library
 flatbuffers==2.0 # LEVEL_01 # The FlatBuffers serialization format for Python
-
+wrapt==1.13.3 # LEVEL_01 # Module for decorators, wrappers and monkey patching
+panel==0.12.4 # LEVEL_04 # A high level app and dashboarding solution for Python
+bokeh==2.4.1 # LEVEL_03 # Interactive plots and applications in the browser from Python
+jupyter-bokeh==3.0.4 # LEVEL_09 # A Jupyter extension for rendering Bokeh content
 #
 # Generic Low Level Tools
 #
@@ -218,8 +215,8 @@ Babel==2.9.1 # LEVEL_02 # Internationalization utilities
 bert-for-tf2==0.14.9 # LEVEL_03 # A TensorFlow 2.0 Keras implementation of BERT
 bertviz==1.2.0 # LEVEL_06 # Bert Vizualizer, https://github.com/jessevig/bertviz, only visual debugger # Attention visualization tool for NLP Transformer models
 sentencepiece==0.1.96 # LEVEL_01 # for BERT # SentencePiece python wrapper
-boto3==1.20.8 # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
-botocore==1.23.8 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
+boto3==1.20.8  # LEVEL_05 # The AWS SDK for Python # required by bertviz # The AWS SDK for Python
+botocore==1.23.9 # LEVEL_03 # required by boto3 # Low-level, data-driven core of boto 3
 #
 spacytextblob==3.0.1 # LEVEL_05 # A TextBlob sentiment analysis pipeline compponent for spaCy
 spacy==3.2.0 # LEVEL_04 # Industrial-strength Natural Language Processing (NLP) in Python
@@ -427,7 +424,7 @@ notebook==6.4.6 # LEVEL_06 # A web-based notebook environment for interactive co
 nbsphinx==0.8.7 # LEVEL_06 # Jupyter Notebook Tools for Sphinx
 nbconvert==6.3.0 # LEVEL_05 # Converting Jupyter Notebooks
 qtconsole==5.2.0 # LEVEL_05 # Jupyter Qt console
-ipykernel==6.5.0 # LEVEL_04 # IPython Kernel for Jupyter
+ipykernel==6.5.1 # LEVEL_04 # IPython Kernel for Jupyter
 nbclient==0.5.8 # LEVEL_04 # A client library for executing notebooks. Formerly nbconvert's ExecutePreprocessor
 nbformat==5.1.3 # LEVEL_03 # The Jupyter Notebook format
 matplotlib-inline==0.1.3 # LEVEL_02 # Inline Matplotlib backend for Jupyter
