--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -198,10 +198,27 @@ pmdarima==1.8.4 # LEVEL_05 # Python's forecast::auto.arima equivalent
 #darts>=0.9.1  # time series predictions (behind on requirements)
 #tsai>=0.2.18  # time series and sequences, triggers huge number of dependencies !
 prophet==1.0.1 # LEVEL_05 # time series forecasts from Facebook # Automatic Forecasting Procedure
+stumpy==1.9.2 # LEVEL_03 # A powerful and scalable library that can be used for a variety of time series data mining tasks
 Cython==0.29.24 # LEVEL_01 # pystan: cython!=0.25.1,>=0.22 # The Cython compiler for writing C extensions for the Python language
-convertdate==2.3.2 # LEVEL_02 # for prophet (requires pytz, pymeeus) # Converts between Gregorian dates and other calendar systems.Calendars included: Baha'i, French Republican, Hebrew, Indian Civil, Islamic, ISO, Julian, Mayan and Persian
-LunarCalendar==0.0.9 # LEVEL_03 # for prophet # A lunar calendar converter, including a number of lunar and solar holidays, mainly from China
+
+#
+# Date & Time conversions
+#
+int-date==0.1.8 # LEVEL_03 # Utility for int date like 20150312
+arrow==1.2.1 # LEVEL_03 # Better dates & times for Python
 holidays==0.11.3.1 # LEVEL_03 # for prophet # Generate and work with holidays in Python
+LunarCalendar==0.0.9 # LEVEL_03 # for prophet # A lunar calendar converter, including a number of lunar and solar holidays, mainly from China
+tzlocal==4.1 # LEVEL_03 # tzinfo object for the local timezone
+pytz-deprecation-shim==0.1.0.post0 # LEVEL_02 # Shims to make deprecation of pytz easier
+python-dateutil==2.8.2 # LEVEL_02 # Extensions to the standard Python datetime module
+convertdate==2.3.2 # LEVEL_02 # for prophet (requires pytz, pymeeus) # Converts between Gregorian dates and other calendar systems.Calendars included: Baha'i, French Republican, Hebrew, Indian Civil, Islamic, ISO, Julian, Mayan and Persian
+isodate==0.6.0 # LEVEL_02 # An ISO 8601 date/time/duration parser and formatter
+pyluach==1.3.0 # LEVEL_01 # Pyluach is a Python package for manipulating Hebrew dates,                     Gregorian-Hebrew calendar conversions, getting the weekly                     parsha, and other Jewish calendar related calculations
+iso8601==1.0.2 # LEVEL_01 # Simple module to parse ISO 8601 dates
+hijri-converter==2.2.2 # LEVEL_01 # Accurate Hijri-Gregorian dates converter based on the Umm al-Qura calendar
+pytz==2021.3 # LEVEL_01 # World timezone definitions, modern and historical
+tzdata==2021.5 # LEVEL_01 # Provider of IANA time zone data
+pytimeparse==1.1.8 # LEVEL_01 # Time expression parser
 
 #
 # NLP
@@ -263,12 +280,13 @@ rapidminer==9.10.0.0 # LEVEL_05 # Tools for running RapidMiner processes and man
 zeep==4.1.0 # LEVEL_04 # A modern/fast Python SOAP client based on lxml / requests
 requests-file==1.5.1 # LEVEL_03 # File transport adapter for Requests
 cached-property==1.5.2 # LEVEL_01 # A decorator for caching properties in classes
-isodate==0.6.0 # LEVEL_02 # An ISO 8601 date/time/duration parser and formatter
 platformdirs==2.4.0 # LEVEL_01 # A small Python module for determining appropriate platform-specific dirs, e.g. a "user data dir"
 
 #
 # Computer Vision
 #
+imagecodecs-lite==2020.1.31 # LEVEL_03 # The imagecodecs-lite package is deprecated. Use the imagecodecs package instead
+imagecodecs==2021.11.20 # LEVEL_02 # Image transformation, compression, and decompression codecs
 opencv-python==4.5.4.58 # LEVEL_02 # Wrapper package for OpenCV python bindings
 opencv-python-headless==4.5.4.58 # LEVEL_02 # Wrapper package for OpenCV python bindings
 imageio==2.11.0 # LEVEL_02 # Library for reading and writing a wide range of image, video, scientific, and volumetric data formats
@@ -316,7 +334,6 @@ rfc3986==1.5.0 # LEVEL_01 # Validating URI References per RFC 3986
 selenium==4.0.0 # LEVEL_05 # 
 #
 stockstats==0.3.2 # LEVEL_04 # DataFrame with inline stock statistics support
-int-date==0.1.8 # LEVEL_03 # Utility for int date like 20150312
 #
 pyportfolioopt==1.5.1 # LEVEL_06 # Financial portfolio optimization in python
 cvxpy==1.1.17 # LEVEL_05 # A domain-specific language for modeling convex optimization problems in Python
@@ -479,25 +496,33 @@ twint==2.1.20 # LEVEL_05 # Twitter downloader # An advanced Twitter scraping & O
 #dropbox>=11.14.0  # DropBox API
 
 #
+# CSS
+#
+soupsieve==2.3.1 # LEVEL_01 # A modern CSS selector implementation for Beautiful Soup
+tinycss2==1.1.1 # LEVEL_02 # A tiny CSS parser
+cssselect2==0.4.1 # LEVEL_03 # cssselect2
+
+#
 # Tools
 #
 cloudscraper==1.2.58 # LEVEL_04 # A Python module to bypass Cloudflare's anti-bot page
 beautifulsoup4==4.10.0 # LEVEL_02 # Screen-scraping library
-soupsieve==2.3.1 # LEVEL_01 # A modern CSS selector implementation for Beautiful Soup
 libclang==12.0.0 # LEVEL_01 # Clang Python Bindings, mirrored from the official LLVM repo: https://github.com/llvm/llvm-project/tree/main/clang/bindings/python, to make the installation process easier
 persist-queue==0.7.0 # LEVEL_01 # Use with iLock !! (or celery ?) # A thread-safe disk based persistent queue in Python
 filelock==3.4.0 # LEVEL_01 # A platform independent file lock
 #
+pytype==2021.11.12 # LEVEL_04 # Python type inferencer
 flake8==4.0.1 # LEVEL_02 # better linter than pyflakes # the modular source code checker: pep8 pyflakes and co
+mccabe==0.6.1 # LEVEL_01 # McCabe checker, plugin for flake8
+typeguard==2.13.0 # LEVEL_01 # Run-time type checker for Python
 pyflakes==2.4.0 # LEVEL_01 # required by flake8 # passive checker of Python programs
 pycodestyle==2.8.0 # LEVEL_01 # Python style guide checker
+mypy-extensions==0.4.3 # LEVEL_01 # Experimental type system extensions for programs checked with the mypy typechecker
 #
 gprof2dot==2021.2.21 # LEVEL_01 # attempt to visualize cProfile # Generate a dot graph from the output of several profilers
 pydeps==1.10.12 # LEVEL_02 # cd src/main; pydeps .; open main.svg # Display module dependencies
 autopep8==1.6.0 # LEVEL_02 # using fix_file # A tool that automatically formats Python code to conform to the PEP 8 style guide
 mypy==0.910 # LEVEL_02 # Optional static typing for Python
-mypy-extensions==0.4.3 # LEVEL_01 # investigate more for automated checking # Experimental type system extensions for programs checked with the mypy typechecker
-pytype==2021.11.12 # LEVEL_04 # Python type inferencer
 importlab==0.6.1 # LEVEL_02 # A library to calculate python dependency graphs
 libcst==0.3.21 # LEVEL_03 # A concrete syntax tree with AST-like properties for Python 3.5, 3.6, 3.7 and 3.8 programs
 ninja==1.10.2.2 # LEVEL_01 # Ninja is a small build system with a focus on speed
@@ -525,7 +550,7 @@ mistune==0.8.4 # LEVEL_01 # The fastest markdown parser in pure Python
 ##################################################################
 
 aiodns==3.0.0 # LEVEL_04 # Simple DNS resolver for asyncio
-aiohttp-socks==0.6.0 # LEVEL_04 # Proxy connector for aiohttp
+aiohttp-socks==0.7.1 # LEVEL_04 # Proxy connector for aiohttp
 pyanalyze==0.4.0 # LEVEL_04 # A static analyzer for Python
 pycocotools==2.0.2 # LEVEL_05 # Official APIs for the MS-COCO dataset
 #
@@ -535,11 +560,10 @@ async-timeout==4.0.1 # LEVEL_02 # Timeout context manager for asyncio programs
 aioredis==2.0.0 # 1.3.1 # LEVEL_03 # asyncio (PEP 3156) Redis support
 altgraph==0.17.2 # LEVEL_01 # Python graph (network) package
 ansi2html==1.6.0 # LEVEL_01
-anyio==3.3.4 # LEVEL_02 # High level compatibility layer for multiple asynchronous event loop implementations
+anyio==3.4.0 # LEVEL_02 # High level compatibility layer for multiple asynchronous event loop implementations
 appdirs==1.4.4 # LEVEL_01 # A small Python module for determining appropriate platform-specific dirs, e.g. a "user data dir"
 appnope==0.1.2 # LEVEL_01 # Disable App Nap on macOS >= 10.9
 argon2-cffi==21.1.0 # LEVEL_03 # The secure Argon2 password hashing algorithm
-arrow==1.2.1 # LEVEL_03 # Better dates & times for Python
 ast-decompiler==0.4.0 # LEVEL_01 # Python module to decompile AST to Python code
 astunparse==1.6.3 # LEVEL_02 # An AST unparser for Python
 asynq==1.4.0 # LEVEL_03 # Quora's asynq library
@@ -582,14 +606,12 @@ geographiclib==1.52 # LEVEL_01 # The geodesic routines from GeographicLib
 geopy==2.2.0 # LEVEL_02 # Python Geocoding Toolbox
 gin-config==0.5.0 # LEVEL_01 # Gin-Config: A lightweight configuration library for Python
 HeapDict==1.0.1 # LEVEL_01 # a heap with decrease-key and increase-key operations
-hijri-converter==2.2.2 # LEVEL_01 # Accurate Hijri-Gregorian dates converter based on the Umm al-Qura calendar
 hsluv==5.0.2 # LEVEL_01 # Human-friendly HSL
 httplib2==0.20.2 # LEVEL_02 # A comprehensive HTTP client library
 idna==3.3 # LEVEL_01 # Internationalized Domain Names in Applications (IDNA)
 importlib-resources==5.4.0 # LEVEL_02 # Read resources from Python packages
 ipython==7.29.0 # LEVEL_03 # IPython: Productive Interactive Computing
 ipython-genutils==0.2.0 # LEVEL_01 # Vestigial utilities from IPython
-iso8601==1.0.0 # LEVEL_01 # Simple module to parse ISO 8601 dates
 itsdangerous==2.0.1 # LEVEL_01 # Safely pass data to untrusted environments and back
 jedi==0.18.1 # LEVEL_02 # An autocompletion tool for Python that can be used for text editors
 Jinja2==3.0.3 # LEVEL_02 # template engine # A very fast and expressive template engine
@@ -601,7 +623,6 @@ lxml==4.6.4 # LEVEL_01 # Powerful and Pythonic XML processing library combining 
 m3u8==0.9.0 # LEVEL_02 # play list parser, udemy-dl2 # Python m3u8 parser
 macholib==1.15.2 # LEVEL_02 # Mach-O header analysis and editing
 MarkupSafe==2.0.1 # LEVEL_01 # Safely add untrusted strings to HTML/XML markup
-mccabe==0.6.1 # LEVEL_01 # McCabe checker, plugin for flake8
 memory-profiler==0.58.0 # LEVEL_02 # A module for monitoring memory usage of a python program
 msgpack==1.0.2 # LEVEL_01 # MessagePack (de)serializer
 multidict==5.2.0 # LEVEL_01 # multidict implementation
@@ -643,14 +664,9 @@ pycparser==2.21 # LEVEL_01 # C parser in Python
 pydantic==1.8.2 # LEVEL_02 # Data validation and settings management using python 3.6 type hinting
 pyinstaller==4.7 # LEVEL_03 # PyInstaller bundles a Python application and all its dependencies into a single package
 pyinstaller-hooks-contrib==2021.3 # LEVEL_01 # deployment # Community maintained hooks for PyInstaller
-pyluach==1.3.0 # LEVEL_01 # Pyluach is a Python package for manipulating Hebrew dates,                     Gregorian-Hebrew calendar conversions, getting the weekly                     parsha, and other Jewish calendar related calculations
 PyMeeus==0.5.11 # LEVEL_01 # Python implementation of Jean Meeus astronomical routines
 pyrsistent==0.18.0 # LEVEL_01 # Persistent/Functional/Immutable data structures
-PySocks==1.7.1 # LEVEL_01 # A Python SOCKS client module. See https://github.com/Anorov/PySocks for more information
-python-dateutil==2.8.2 # LEVEL_02 # Extensions to the standard Python datetime module
 python-slugify==5.0.2 # LEVEL_02 # A Python Slugify application that handles Unicode
-python-socks==1.2.4 # LEVEL_01 # Core proxy (SOCKS4, SOCKS5, HTTP tunneling) functionality for Python
-pytz==2021.3 # LEVEL_01 # World timezone definitions, modern and historical
 PyWavelets==1.2.0 # LEVEL_02 # PyWavelets, wavelet transform module
 PyYAML==6.0 # LEVEL_01 # YAML parser and emitter for Python
 pyzmq==22.3.0 # LEVEL_01 # Python bindings for 0MQ
@@ -675,7 +691,6 @@ sortedcontainers==2.4.0 # LEVEL_01 # Sorted Containers -- Sorted List, Sorted Di
 srsly==2.4.2 # LEVEL_02 # Modern high-performance serialization utilities for Python
 statsmodels==0.13.1 # LEVEL_04 # Statistical computations and models for Python
 stdlib-list==0.8.0 # LEVEL_01 # A list of Python Standard Libraries (2.6-7, 3.2-9)
-stumpy==1.9.2 # LEVEL_03 # A powerful and scalable library that can be used for a variety of time series data mining tasks
 tabulate==0.8.9 # LEVEL_01 # Pretty-print tabular data
 tblib==1.7.0 # LEVEL_01 # Traceback serialization library
 terminado==0.12.1 # LEVEL_02 # Tornado websocket backend for the Xterm.js Javascript terminal emulator library
@@ -688,7 +703,6 @@ tornado==6.1 # LEVEL_01 # Tornado is a Python web framework and asynchronous net
 tqdm==4.62.3 # LEVEL_01 # Fast, Extensible Progress Meter
 traitlets==5.1.1 # LEVEL_01 # Traitlets Python configuration system
 typed-ast==1.5.0 # LEVEL_01 # a fork of Python 2 and 3 ast modules with type comment support
-typeguard==2.13.0 # LEVEL_01 # Run-time type checker for Python
 typer==0.4.0 # LEVEL_02 # Typer, build great CLIs. Easy to code. Based on Python type hints
 typeshed-client==1.1.3 # LEVEL_03 # A library for accessing stubs in typeshed
 typing-inspect==0.7.1 # LEVEL_02 # Runtime inspection utilities for typing module
@@ -708,6 +722,9 @@ yarl==1.7.2 # LEVEL_02 # Yet another URL library
 zict==2.0.0 # LEVEL_02 # Mutable mapping tools
 zipp==3.6.0 # LEVEL_01 # Backport of pathlib-compatible object wrapper for zip files
 #
+PySocks==1.7.1 # LEVEL_01 # A Python SOCKS client module. See https://github.com/Anorov/PySocks for more information
+python-socks==2.0.0 # LEVEL_01 # Core proxy (SOCKS4, SOCKS5, HTTP tunneling) functionality for Python
+#
 #
 # SQL
 #
@@ -722,8 +739,7 @@ psycopg2-binary==2.9.2 # LEVEL_01 # psycopg2 - Python-PostgreSQL Database Adapte
 #
 #streamlit # has some dependencies !!
 tbb==2021.4.0 # LEVEL_01 # Intel® oneAPI Threading Building Blocks (oneTBB)
-tiledb==0.11.0 # LEVEL_02 # Pythonic interface to the TileDB array storage manager
-tinycss2==1.1.0 # LEVEL_02 # tinycss2
+tiledb==0.11.1 # LEVEL_02 # Pythonic interface to the TileDB array storage manager
 xarray==0.20.1 # LEVEL_04 # N-D labeled arrays and datasets in Python
 zstd==1.5.0.2 # LEVEL_01 # ZSTD Bindings for Python
 #
@@ -740,9 +756,6 @@ trio==0.19.0 # LEVEL_03 # A friendly Python library for async concurrency and I/
 trio-websocket==0.9.2 # LEVEL_04 # WebSocket library for Trio
 wsproto==1.0.0 # LEVEL_02 # WebSockets state-machine based protocol implementation
 #
-tzlocal==4.1 # LEVEL_03 # tzinfo object for the local timezone
-pytz-deprecation-shim==0.1.0.post0 # LEVEL_02 # Shims to make deprecation of pytz easier
-tzdata==2021.5 # LEVEL_01 # Provider of IANA time zone data
 validators==0.18.2 # LEVEL_02 # Python Data Validation for Humans™
 #
 GitPython==3.1.24 # LEVEL_03 # GitPython is a python library used to interact with Git repositories
@@ -782,7 +795,6 @@ param==1.12.0 # LEVEL_01 # Make your Python code clearer and more reliable by de
 pyct==0.4.8 # LEVEL_02 # Python package common tasks for users (e.g. copy examples, fetch data, ...)
 #
 conllu==4.4.1 # LEVEL_01 # CoNLL-U Parser parses a CoNLL-U formatted string into a nested python dictionary
-cssselect2==0.4.1 # LEVEL_03 # cssselect2
 #
 cytoolz==0.11.2 # LEVEL_02 # Cython implementation of Toolz: High performance functional utilities
 #
@@ -817,9 +829,6 @@ python-gflags==3.1.2 # LEVEL_01 # Google Commandline Flags Module
 gunicorn==20.1.0 # LEVEL_02 # WSGI HTTP Server for UNIX
 #
 icu==0.0.1 # LEVEL_01 # Integrated Cognitive User Assistance
-#
-imagecodecs==2021.11.11 # LEVEL_02 # Image transformation, compression, and decompression codecs
-imagecodecs-lite==2020.1.31 # LEVEL_03 # The imagecodecs-lite package is deprecated. Use the imagecodecs package instead
 #
 krb5==0.2.0 # LEVEL_01 # Kerberos API bindings for Python
 #
@@ -861,7 +870,7 @@ rouge-score==0.0.4 # LEVEL_03 # Pure python implementation of ROUGE-1.5.5
 pynvml==11.0.0 # LEVEL_01 # Python Bindings for the NVIDIA Management Library
 #
 numcodecs==0.9.1 # LEVEL_02 # A Python package providing buffer compression and transformation codecs for use in data storage and communication applications
-zarr==2.10.2 # LEVEL_03 # An implementation of chunked, compressed, N-dimensional arrays for Python
+zarr==2.10.3 # LEVEL_03 # An implementation of chunked, compressed, N-dimensional arrays for Python
 fasteners==0.16.3 # LEVEL_02 # A python package that provides useful locks
 asciitree==0.3.3 # LEVEL_01 # Draws ASCII trees
 #
@@ -876,7 +885,6 @@ minimal-snowplow-tracker==0.0.2 # LEVEL_03 # A minimal snowplow event tracker fo
 msrest==0.6.21 # LEVEL_04 # AutoRest swagger generator Python client runtime
 oscrypto==1.2.1 # LEVEL_02 # TLS (SSL) sockets, key generation, encryption, decryption, signing, verification and KDFs using the OS crypto libraries. Does not require a compiler, and relies on the OS for patching. Works on Windows, OS X and Linux/BSD
 pycryptodomex==3.11.0 # LEVEL_01 # Cryptographic library for Python
-pytimeparse==1.1.8 # LEVEL_01 # Time expression parser
 ruamel_yaml==0.17.17 # LEVEL_02 # ruamel.yaml is a YAML parser/emitter that supports roundtrip preservation of comments, seq/map flow style, and map key order
 ruamel_yaml_clib==0.2.6 # LEVEL_01 # C version of reader, parser and emitter for ruamel.yaml derived from libyaml
 #
