--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -223,6 +223,7 @@ pytimeparse==1.1.8 # LEVEL_01 # Time expression parser
 #
 # NLP
 #
+# ecco # LEVEL_08 # old dependencies
 stanza==1.3.0 # LEVEL_03 # A Python NLP Library for Many Human Languages, by the Stanford NLP Group
 #
 nltk==3.6.5 # LEVEL_02 # Natural Language Toolkit
@@ -503,6 +504,17 @@ tinycss2==1.1.1 # LEVEL_02 # A tiny CSS parser
 cssselect2==0.4.1 # LEVEL_03 # cssselect2
 
 #
+# Checkers
+#
+pytype==2021.11.18 # LEVEL_04 # Python type inferencer
+flake8==4.0.1 # LEVEL_02 # better linter than pyflakes # the modular source code checker: pep8 pyflakes and co
+mccabe==0.6.1 # LEVEL_01 # McCabe checker, plugin for flake8
+typeguard==2.13.2 # LEVEL_01 # Run-time type checker for Python
+pyflakes==2.4.0 # LEVEL_01 # required by flake8 # passive checker of Python programs
+pycodestyle==2.8.0 # LEVEL_01 # Python style guide checker
+mypy-extensions==0.4.3 # LEVEL_01 # Experimental type system extensions for programs checked with the mypy typechecker
+
+#
 # Tools
 #
 cloudscraper==1.2.58 # LEVEL_04 # A Python module to bypass Cloudflare's anti-bot page
@@ -511,21 +523,13 @@ libclang==12.0.0 # LEVEL_01 # Clang Python Bindings, mirrored from the official 
 persist-queue==0.7.0 # LEVEL_01 # Use with iLock !! (or celery ?) # A thread-safe disk based persistent queue in Python
 filelock==3.4.0 # LEVEL_01 # A platform independent file lock
 #
-pytype==2021.11.12 # LEVEL_04 # Python type inferencer
-flake8==4.0.1 # LEVEL_02 # better linter than pyflakes # the modular source code checker: pep8 pyflakes and co
-mccabe==0.6.1 # LEVEL_01 # McCabe checker, plugin for flake8
-typeguard==2.13.0 # LEVEL_01 # Run-time type checker for Python
-pyflakes==2.4.0 # LEVEL_01 # required by flake8 # passive checker of Python programs
-pycodestyle==2.8.0 # LEVEL_01 # Python style guide checker
-mypy-extensions==0.4.3 # LEVEL_01 # Experimental type system extensions for programs checked with the mypy typechecker
-#
 gprof2dot==2021.2.21 # LEVEL_01 # attempt to visualize cProfile # Generate a dot graph from the output of several profilers
 pydeps==1.10.12 # LEVEL_02 # cd src/main; pydeps .; open main.svg # Display module dependencies
 autopep8==1.6.0 # LEVEL_02 # using fix_file # A tool that automatically formats Python code to conform to the PEP 8 style guide
 mypy==0.910 # LEVEL_02 # Optional static typing for Python
 importlab==0.6.1 # LEVEL_02 # A library to calculate python dependency graphs
-libcst==0.3.21 # LEVEL_03 # A concrete syntax tree with AST-like properties for Python 3.5, 3.6, 3.7 and 3.8 programs
-ninja==1.10.2.2 # LEVEL_01 # Ninja is a small build system with a focus on speed
+libcst==0.3.23 # LEVEL_03 # A concrete syntax tree with AST-like properties for Python 3.5, 3.6, 3.7 and 3.8 programs
+ninja==1.10.2.3 # LEVEL_01 # Ninja is a small build system with a focus on speed
 #
 pipx==0.16.4 # LEVEL_03 # Install and Run Python Applications in Isolated Environments
 userpath==1.7.0 # LEVEL_02 # Cross-platform tool for adding locations to the user PATH, no elevated privileges required!
