--- a/requirements_miniconda.txt
+++ b/requirements_miniconda.txt
@@ -310,7 +310,7 @@ alpha-vantage==2.3.1 # LEVEL_04 # Python module to get stock data from the Alpha
 finta==1.3 # LEVEL_04 # Common financial technical indicators implemented in Pandas
 iexfinance==0.5.0 # LEVEL_04 # Python module to get stock data from IEX Cloud and IEX API 1.0
 trading-calendars==2.1.1 # LEVEL_04 # trading_calendars is a Python library with securities exchange calendars used by Quantopian's Zipline
-yfinance==0.1.66 # LEVEL_04 # https://github.com/ranaroussi/yfinance # Yahoo! Finance market data downloader
+yfinance==0.1.67 # LEVEL_04 # https://github.com/ranaroussi/yfinance # Download market data from Yahoo! Finance API
 yahoofinancials==1.6 # LEVEL_03 # https://github.com/JECSand/yahoofinancials # A powerful financial data module used for pulling both fundamental and technical data from Yahoo Finance
 coinpaprika==0.1.0 # LEVEL_03 # Coinpaprika API Python client
 ib-insync==0.9.69 # LEVEL_03 # InteractiveBrokers 3rd party trading api ip_insync; dataclasses # if necessary # Python sync/async framework for Interactive Brokers API
@@ -325,14 +325,14 @@ py-vollib==1.0.1 # LEVEL_04 # option pricing
 TA-Lib==0.4.21 # LEVEL_02 # NO_CACHE_DIR # fix: pip uninstall ta-lib; pip install --upgrade --no-cache-dir ta-lib # sometimes needed # Python wrapper for TA-Lib
 #
 robin-stocks==2.1.0 # LEVEL_04 # A Python wrapper around the Robinhood API
-cryptography==35.0.0 # LEVEL_03 # cryptography is a package which provides cryptographic recipes and primitives to Python developers
+cryptography==36.0.0 # LEVEL_03 # cryptography is a package which provides cryptographic recipes and primitives to Python developers
 #
 Authlib==0.15.5 # LEVEL_04 # The ultimate Python library in building OAuth and OpenID Connect servers
 h11==0.12.0 # LEVEL_01 # A pure-Python, bring-your-own-I/O implementation of HTTP/1.1
 pyotp==2.6.0 # LEVEL_01 # Python One Time Password Library
 python-dotenv==0.19.2 # LEVEL_01 # Read key-value pairs from a .env file and set them as environment variables
 rfc3986==1.5.0 # LEVEL_01 # Validating URI References per RFC 3986
-selenium==4.0.0 # LEVEL_05 # 
+selenium==4.1.0 # LEVEL_05 #
 #
 stockstats==0.3.2 # LEVEL_04 # DataFrame with inline stock statistics support
 #
@@ -427,10 +427,10 @@ jupyterlab==3.2.4 # LEVEL_08 # JupyterLab computational environment
 jupyter-server-proxy==3.1.0 # LEVEL_07 # Jupyter server extension to supervise and proxy web services
 jupyterlab-server==2.8.2 # LEVEL_07 # A set of server components for JupyterLab and JupyterLab like applications
 jupyter-dash==0.4.0 # LEVEL_06 # Dash support for the Jupyter notebook interface
-jupyter-server==1.11.2 # LEVEL_06 # The backend—i.e. core services, APIs, and REST endpoints—to Jupyter web applications
+jupyter-server==1.12.0 # LEVEL_06 # The backend—i.e. core services, APIs, and REST endpoints—to Jupyter web applications
 jupyter-console==6.4.0 # LEVEL_05 # Jupyter terminal console
 jupyter-packaging==0.11.1 # LEVEL_04 # Jupyter Packaging Utilities
-jupyter-client==7.0.6 # LEVEL_03 # Jupyter protocol implementation and client libraries
+jupyter-client==7.1.0 # LEVEL_03 # Jupyter protocol implementation and client libraries
 jupyter-core==4.9.1 # LEVEL_02 # Jupyter core package. A base package on which Jupyter projects rely
 jupyterlab-pygments==0.1.2 # LEVEL_02 # Pygments theme using JupyterLab CSS variables
 jupyterlab-widgets==1.0.2 # LEVEL_01 # A JupyterLab extension
@@ -441,9 +441,9 @@ nbclassic==0.3.4 # LEVEL_07 # Jupyter Notebook as a Jupyter Server extension
 notebook==6.4.6 # LEVEL_06 # A web-based notebook environment for interactive computing
 nbsphinx==0.8.7 # LEVEL_06 # Jupyter Notebook Tools for Sphinx
 nbconvert==6.3.0 # LEVEL_05 # Converting Jupyter Notebooks
-qtconsole==5.2.0 # LEVEL_05 # Jupyter Qt console
+qtconsole==5.2.1 # LEVEL_05 # Jupyter Qt console
 ipykernel==6.5.1 # LEVEL_04 # IPython Kernel for Jupyter
-nbclient==0.5.8 # LEVEL_04 # A client library for executing notebooks. Formerly nbconvert's ExecutePreprocessor
+nbclient==0.5.9 # LEVEL_04 # A client library for executing notebooks. Formerly nbconvert's ExecutePreprocessor
 nbformat==5.1.3 # LEVEL_03 # The Jupyter Notebook format
 matplotlib-inline==0.1.3 # LEVEL_02 # Inline Matplotlib backend for Jupyter
 #
@@ -462,7 +462,7 @@ Flask==2.0.2 # LEVEL_03 # A simple framework for building complex web applicatio
 jsonschema==4.2.1 # LEVEL_02 # An implementation of JSON Schema validation for Python
 json5==0.9.6 # LEVEL_01 # A Python implementation of the JSON5 data format
 simplejson==3.17.6 # LEVEL_01 # Simple, fast, extensible JSON encoder/decoder for Python
-ujson==4.2.0 # LEVEL_01 # Ultra fast JSON encoder and decoder for Python
+ujson==4.3.0 # LEVEL_01 # Ultra fast JSON encoder and decoder for Python
 PyJWT==2.3.0 # LEVEL_01 # JSON Web Token implementation in Python
 jmespath==0.10.0 # LEVEL_01 # JSON Matching Expressions
 #
